fix es_game_stats still visible after switching back to default view

--- a/css/enhancedsteam.css
+++ b/css/enhancedsteam.css
@@ -1089,6 +1089,7 @@ input[type=checkbox].es_dlc_selection:checked + label {
   overflow: hidden;
 }
 .es_badge_progress_info,
+.es_game_stats,
 .es_binder_view .badge_progress_info,
 .es_binder_view .badge_cards,
 .es_binder_view .badge_title_stats,
@@ -1144,7 +1145,8 @@ input[type=checkbox].es_dlc_selection:checked + label {
 .es_binder_view .badge_empty_name {
   clear: both;
 }
-.es_binder_view .es_badge_progress_info {
+.es_binder_view .es_badge_progress_info,
+.es_binder_view .es_game_stats {
   display: block !important;
 }
 .badge_content .es_game_stats {
